apps/kube/monitoring/manifests/grafana-gate-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: grafana-gate
    namespace: monitoring
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - grafana.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          timeouts:
              backendRequest: 3600s
          backendRefs:
              - name: grafana-gate
                port: 5678
